# Computer-Graphics

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
resources/: KSG GvsG Next Plus - GN-005 Gundam Virtue - Ren.mtl
shaders/: fragment.glsl  vertex.glsl
src/: controller.cpp  controller.h  glad.c  main.cpp  main_.cpp  main_lys.cpp  main_v2.cpp  model_loader.cpp  model_loader.h  shader.h
